Fixed search results icon not aligned

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -19,17 +19,14 @@
             padding: 0;
 
             h3 {
-                display: inline-block;
+                display: flex;
+                align-items: baseline;
                 font-family: $pingFang;
 
                 svg {
-                    display: inline-block;
-                    vertical-align: middle;
-                    margin-top: -4px;
-                }
-
-                div {
-                    display: inline-block;
+                    position: relative;
+                    top: 2px;
+                    margin-right: 0.5rem;
                 }
             }
         }
